[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/sprites/sprite_playersheet.png" type="Texture" id=1]
[ext_resource path="res://scenes/camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/player.gd" type="Script" id=4]
[ext_resource path="res://assets/sprites/sprite_tec9shootingsheet.png" type="Texture" id=5]
[ext_resource path="res://assets/sounds/tec9shot.mp3" type="AudioStream" id=6]

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 50, 0, 25, 75 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 75, 0, 25, 75 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 20 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "default",
"speed": 14.0
}, {
"frames": [ SubResource( 27 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "shootingtec9",
"speed": 30.0
} ]

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 0, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 24, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 48, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 72, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 96, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 0, 24, 24, 24 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 29 ), SubResource( 28 ), SubResource( 31 ), SubResource( 32 ), SubResource( 31 ) ],
"loop": true,
"name": "default",
"speed": 14.0
}, {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 5.84653, 8.7104 )

[sub_resource type="CircleShape2D" id=19]
radius = 9.75909

[node name="Player" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Camera" parent="." instance=ExtResource( 2 )]
visible = false
target = NodePath("..")

[node name="Body" type="AnimatedSprite" parent="."]
rotation = 1.5708
frames = SubResource( 11 )

[node name="Legs" type="AnimatedSprite" parent="."]
rotation = 1.5708
z_index = -1
frames = SubResource( 17 )
animation = "idle"

[node name="Collider" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 18 )

[node name="BulletPoint" type="Node2D" parent="."]
position = Vector2( 40, 0 )

[node name="Sounds" type="Node" parent="."]

[node name="GunSounds" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 6 )
volume_db = -7.0

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
shape = SubResource( 19 )

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
